--- a/Architecture-Website/css/style.css
+++ b/Architecture-Website/css/style.css
@@ -302,6 +302,302 @@ html {
     grid-row-gap: 4rem;
 }
 
-.about-us-img-wrapper {
-    width: 50rem;
+.service {
+    width: 100%;
+    margin-bottom: 2rem;
 }
+
+.service:nth-child(1) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+
+.service:nth-child(2) {
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+}
+
+.service:nth-child(3) {
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+
+.service:nth-child(4) {
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+
+.service:nth-child(5) {
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+}
+
+.service:nth-child(6) {
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+
+.service-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.service-header i {
+    font-size: 4rem;
+    color: #4b4b4b;
+    margin-right: 2rem;
+}
+
+.service-header h3 {
+    font-family: "Baloo Da 2";
+    font-size: 2.6rem;
+    line-height: 2.6rem;
+    font-weight: 400;
+    margin-bottom: 2rem;
+}
+
+.service-text {
+    font-family: "Josefin Slab";
+    font-size: 1.6rem;
+    text-align: justify;
+}
+
+.about-us-img-wrapper {
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 100%;
+}
+
+.about-us-img-wrapper img {
+    width: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+}
+
+/* Who We Are */
+.team {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5rem 20rem 5rem;
+}
+
+.cards-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 8rem;
+    width: 100%;
+}
+
+.card {
+    width: 37rem;
+    height: 45rem;
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, .4);
+    border-radius: .5rem;
+    position: relative;
+}
+
+.card-img-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    border-radius: .5rem;
+}
+
+.card-img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .8;
+    border-radius: .5rem;
+    transition: opacity .3s;
+}
+
+.card:hover .card-img-wrapper img {
+    opacity: .5;
+}
+
+.card-info {
+    position: absolute;
+    bottom: 0;
+    padding: 2rem;
+    text-shadow: 0 .2rem .5rem rgba(0, 0, 0, .4);
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+}
+
+.card:hover .card-info {
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+}
+
+.card-info h2 {
+    font-family: "Balo Da 2";
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    font-weight: 300;
+    color: #eee
+}
+
+.card-info h3 {
+    font-family: "Mulish";
+    font-size: 2rem;
+    font-weight: 500;
+    color: #a52a2a;
+    margin-bottom: 1rem;
+}
+
+.card-info p {
+    font-family: "Baloo Da 2";
+    font-size: 1.4rem;
+    line-height: 1.6rem;
+    font-weight: 300;
+    color: #eee;
+    width: 80%;
+    margin-bottom: 2rem;
+}
+
+.card-info button {
+    width: 10rem;
+    height: 3rem;
+    background-color: #c29525;
+    border: none;
+    font-family: "Baloo Da 2";
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+    color: #eee;
+    border-radius: .3rem;
+    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
+    
+}
+
+/* Contact */
+.contact {
+    width: 100%;
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-wrapper {
+    width: 60%;
+    height: 75rem;
+    display: flex;
+    box-shadow: 0 3rem 7rem rgba(0, 0, 0, .5);
+}
+
+.contact-left {
+    width: 35%;
+    background: linear-gradient(rgba(15, 15, 15, .6), rgba(22, 22, 22, .9)), url(../img/contact-bg.jpg) center no-repeat;
+    background-size: cover;
+}
+
+.contact-right {
+    width: 65%;
+    background-color: #eee;
+    padding: 3rem 10rem 10rem;
+}
+
+.contact-heading {
+    font-family: "Baloo Da 2";
+    font-size: 6rem;
+    font-weight: 300;
+    color: #272727;
+    margin-bottom: 5rem;
+    text-align: center;
+}
+
+.contact-right form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.field {
+    width: 45rem;
+    background-color: transparent;
+    border: none;
+    border-bottom: .2rem dashed #636363;
+    margin: 3rem 0;
+    padding: 1rem 1rem 1rem 0;
+    font-style: "Mulish";
+    font-size: 1.6rem;
+    color: #4b4b4b;
+}
+
+.input-group {
+    position: relative;
+  }
+  
+  .field {
+    width: 45rem;
+    background-color: transparent;
+    border: none;
+    border-bottom: 0.2rem dashed #636363;
+    margin: 3rem 0;
+    padding: 1rem 1rem 1rem 0;
+    font-family: "Muli", serif;
+    font-size: 1.6rem;
+    color: #4b4b4b;
+  }
+  
+  .input-group input {
+    height: 4rem;
+  }
+  
+  .input-group textarea {
+    max-height: 7rem;
+    max-width: 45rem;
+  }
+  
+  .field:focus {
+    border-bottom-style: solid;
+  }
+  
+  .input-group label {
+    position: absolute;
+    left: 0;
+    font-family: "Baloo Da 2", serif;
+    font-size: 1.8rem;
+    color: #4b4b4b;
+    text-transform: uppercase;
+    pointer-events: none;
+    transition: all 0.3s;
+  }
+  
+  .input-label {
+    bottom: 3rem;
+  }
+  
+  .message {
+    bottom: 6rem;
+  }
+  
+  .field:focus ~ label {
+    transform: translateY(-3rem);
+    font-size: 1.2rem;
+  }
+  
+  .submit-btn {
+    width: 45rem;
+    height: 5rem;
+    background-color: #c29525;
+    color: #fff;
+    border: none;
+    margin-top: 2rem;
+    font-family: "Muli", serif;
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    cursor: pointer;
+    text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
+  }
